--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container"></div>
+    <div class="container">
+<h1></h1>
+
+    </div>
     <h1>Hello FD</h1>
-<script src = "script.js"></script>
+<script src = "script.js"> </script>
 </body>
 </html>
