--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -7,11 +8,32 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
-<h1></h1>
+   
 
+   
+
+    <div class="container">
+    <h1> FD Calculator</h1>
+
+    <div class = "form-group">
+            <label for = "principle">Principle Amount</label>
+            <input type = "number" id="principle" placeholder="Enter the Principle Amount">
+        </div>
+
+        <div class = "form-group">
+            <label for = "interestRate">Interst Rate</label>
+            <input type = "number" id="interestRate" placeholder="Enter the Interest Rate">
+        </div>
+
+        <div class = "form-group">
+            <label for = "tenure">Tenure (in years) : </label>
+            <input type = "number" id="tenure" placeholder="Enter Tenure in Years">
+        </div>
+
+        <button id = "calculateBtn" class="calculate-btn">Calculate</button>   
+        <p id = "result" class="result">Maturity Amount</p>
     </div>
-    <h1>Hello FD</h1>
+
 <script src = "script.js"> </script>
 </body>
 </html>
